# babeltrace2-rust-plugin-example-epitome

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml  wrapper.c
src/: lib.rs  wrapper.c
